--- a/index7.html
+++ b/index7.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>task6</title>
+    <title>task7</title>
     <link rel="stylesheet" href="./style.css">
     
 </head>
 <body>
 <div class="box">
    <ul class="menu">
-       <li><a href="">task 6</a></li>
-       <li><a href="index7.html">task 7</a></li>
+       <li><a href="index.html">task 6</a></li>
+       <li><a href="">task 7</a></li>
        <li><a href="index8.html">task 8</a></li>
        <li><a href="index9.html">task 9</a></li>
        <li><a href="index10.html">task 10</a></li>
    </ul>
 </div>
 <script>
-    const eurRate = 1.13;
-    let usd = prompt('Enter amount dollar');
-    let eurAmount = Math.round(usd / eurRate);
-    alert('Amount in euro is ' +eurAmount); 
+   const fileMb = 820;
+   let volumeGb = prompt('Entet flash drive volume, Gb');
+   let numberFiles = Math.floor(volumeGb * 1000 / fileMb);
+   alert('Number of files on flash drive is ' + numberFiles);
 </script>
 </body>
 </html>
