--- a/index6.html
+++ b/index6.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>menu</title>
+    <title>task6</title>
     <link rel="stylesheet" href="./style.css">
     
 </head>
 <body>
 <div class="box">
    <ul class="menu">
-       <li><a href="index6.html">task 6</a></li>
+       <li><a href="">task 6</a></li>
        <li><a href="index7.html">task 7</a></li>
        <li><a href="index8.html">task 8</a></li>
        <li><a href="index9.html">task 9</a></li>
        <li><a href="index10.html">task 10</a></li>
    </ul>
 </div>
+<script>
+    const eurRate = 1.13;
+    let usd = prompt('Enter amount dollar');
+    let eurAmount = Math.round(usd / eurRate);
+    alert('Amount in euro is ' +eurAmount); 
+</script>
 </body>
 </html>
