--- a/hw06_2401/index.html
+++ b/hw06_2401/index.html
@@ -66,6 +66,71 @@
     //     console.log('error');
     // }
 
+// 3 ДНИ НЕДЕЛИ
+
+// let arr = ['mon', 'tue', 'wed', 'thu', 'fri', 'sat', 'sun'];
+// for (let i = 0; i<=7; i++){
+//     alert(arr[i]);
+//     if (confirm ('Want to see next day?')){
+//     }
+//     else {
+//         break;
+//     } 
+// }
+
+// 4 ТАБЛИЦА УМНОЖЕНИЯ
+
+// function showMessage(d){
+//     console.log(d);
+// }
+// for (let i = 2; i <= 9; i++){
+//     for (let j = 1; j <= 10; j++){
+//         d = (`${i} * ${j} = ${j*i}`);
+//         showMessage(d);
+//     }
+// }
+
+let a = 100;
+let delta = a / 2;
+
+alert (`загадайте от 0 до ${a}`);
+let n = a;
+
+let i=1;
+do{
+
+if (confirm(`число равно ${n}?`)){
+    alert('ура');
+    break
+}
+else{
+      if (confirm(`число меньше ${n}?`)){
+        n = n-delta;
+      } 
+   else{
+      if (confirm(`число больше ${n}?`)){
+        n = n+delta;
+      } 
+   }
+delta = Math.floor(delta / 2);
+
+}
+i++;
+// console.log(a, n, delta);
+
+} while(i<20);
+
+
+
+
+
+
+
+ 
+
+
+
+
  
     </script>
    
